welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:6: error: value update is not a member of java.awt.Color
	getCouleurSol()=c;
        ^